Fix: Simplify the OG cards, the image ones took way too long to build

--- a/style/variables.css
+++ b/style/variables.css
@@ -33,6 +33,7 @@
         --color-gray-medium: #888888;
         --color-gray-high: #e4e1ec;
 
+        --text-color: var(--color-gray-high);
         --text-color-link: #1493fb;
         --text-color-link-active: #6969f7;
         --text-color-link-visited: #a6a6f8;
